Замечания по тестам исправлены, структуру проекта подправила